[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
log = "0.4.17"
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "3.2.18", features = ["derive"] }
chrono = "0.4.22"
rusqlite = "0.28.0"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
