[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
colored = "2.0.0"
structopt = "0.3"
clap = { version = "3.2.17", features = ["derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.143", features = ["derive"] }
egui = "0.19.0"
eframe = "0.19.0"
rfd = "0.10.0"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"
